# klinker

./: .gitignore  .readthedocs.yml  LICENSE  README.md  encoder_experiment.py  experiment.py  klinker-conda.yaml  later_eval.py  mkdocs.yml  noxfile.py  pyproject.toml  spark_eval.py
.github/workflows/: main.yml  quality.yml
docs/: index.md
docs/css/: extra.css
run_scripts/: README.md
run_scripts/non_relational/: run_deepblocker_autoencoder.sh  run_deepblocker_ctt.sh  run_deepblocker_hyb.sh  run_only_embeddings.sh  run_token.sh
run_scripts/relational/: run_deepblocker_autoencoder.sh  run_deepblocker_ctt.sh  run_deepblocker_hyb.sh  run_light_ea.sh  run_relational_token.sh  run_tb_deepblocker_ae.sh  run_tb_deepblocker_ctt.sh  run_tb_deepblocker_hyb.sh  run_token_attribute.sh  run_token_token.sh
src/klinker/: __init__.py  eval.py  eval_metrics.py  graph_statistics.py  trackers.py  typing.py  utils.py
src/klinker/blockers/: __init__.py  attribute_clustering.py  attribute_embedding.py  base.py  composite.py  concat_utils.py  hybrid.py  lsh.py  qgrams.py  relation_aware.py  sorted_neighborhood.py  standard.py  token_blocking.py
src/klinker/blockers/embedding/: __init__.py  blockbuilder.py  blocker.py  deep_blocker_encoder.py  deepblocker.py  encoder.py  word_embedding.py
src/klinker/data/: __init__.py  blocks.py  ea_dataset.py  enhanced_df.py  named_vector.py
src/klinker/encoders/: __init__.py  base.py  deepblocker.py  gcn.py  gcn_lp_deepblocker.py  light_ea.py  pretrained.py
src/klinker/models/: __init__.py  deepblocker.py
tests/: conftest.py  mocks.py  test_blockbuilder.py  test_blockers.py  test_blocks.py  test_eval.py  test_frame_encoder.py  test_klinkerframe.py  test_named_vector.py  test_word_embedding.py  util.py
